// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vue/DefaultField > renders correctly - binary field 1`] = `
<pre>
      {
  "path": "root.0.test",
  "type": "binary",
  "status": "initial",
  "error": null,
  "isActive": false,
  "isRequired": true,
  "activeStep": "root.0",
  "value": "&lt;Binary&gt;",
  "field": "&lt;Component&gt;",
  "engine": "&lt;Engine&gt;",
  "setActiveStep": "&lt;Function&gt;",
  "useSubscription": "&lt;Function&gt;"
}
  
</pre>
`;

exports[`vue/DefaultField > renders correctly - non-binary field 1`] = `
<pre>
      {
  "path": "root.0.test",
  "type": "string",
  "status": "initial",
  "error": null,
  "isActive": false,
  "isRequired": true,
  "activeStep": "root.0",
  "value": null,
  "field": "&lt;Component&gt;",
  "engine": "&lt;Engine&gt;",
  "setActiveStep": "&lt;Function&gt;",
  "useSubscription": "&lt;Function&gt;"
}
  
</pre>
`;
